--- a/index.html
+++ b/index.html
@@ -779,20 +779,20 @@
             <div class="corner corner-br"></div>
 
             <h1>✨ Birthday Invitation ✨</h1>
-            <p>Thân mời, ae sài gòn</p>
+            <p>Thân mời, thỏ iu</p>
 
             <div class="invitation-details">
                 <div class="detail-item">
                     <span class="detail-icon">📅</span>
-                    <span>Date: 25/05/2025</span>
+                    <span>Date: 23/05/2025</span>
                 </div>
                 <div class="detail-item">
                     <span class="detail-icon">⏰</span>
-                    <span>Time: 5:00 PM</span>
+                    <span>Time: 3:30 PM</span>
                 </div>
                 <div class="detail-item">
                     <span class="detail-icon">📍</span>
-                    <span>Address: SOM Thai</span>
+                    <span>Address: Baozi</span>
                 </div>
                 <div class="detail-item">
                     <span class="detail-icon">🎒</span>
